# genie-audit-streamlit

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.py  app.yaml  databricks.yml  deploy.sh  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: __init__.py  charts.py  metrics.py  tiles.py
queries/: __init__.py  sql.py
services/: __init__.py  analytics.py  databricks_client.py  report_generator.py
tests/: __init__.py  conftest.py  run_tests.sh  test_analytics.py  test_charts.py  test_conversation_metrics.py  test_databricks_client.py  test_formatters.py  test_integration.py  test_sql.py
utils/: __init__.py  formatters.py
